--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="сontact mail-link link" href="">info@devstudio.com</a>
         </li>
         <li class="phone-number">
-            <a class="сontact phone-number-link link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            <a class="сontact phone-number-link link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
          
     </ul>
@@ -166,7 +166,7 @@
             </li>
                             
             <li class="footer-contact"><a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="footer-contact"><a class="footer-phone-number link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <li class="footer-contact"><a class="footer-phone-number link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </address>
 
